--- a/Views/AdminOperations/Agents.cshtml
+++ b/Views/AdminOperations/Agents.cshtml
@@ -23,7 +23,7 @@
                 <div class="col-md-12">
                     <div class="agent-create">
                         <button class="btn agent-delete mr-3">Delete</button>
-                        <button class="btn agent-create-btn" data-toggle="modal" data-target="#staticBackdrop">Create Agent</button>
+                        <button type="button" class="btn agent-create-btn" ><a href="/AdminOperations/RegisterAgent">Create Agent</a></button>
                     </div>
                 </div>
             </div>
