--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -57,9 +57,9 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Booking</a>
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item" href="mybooking.html">Current Booking</a>
-                                        <a class="dropdown-item" href="mybooking.html">Previous Booking</a>
-                                        <a class="dropdown-item" href="mybooking.html">Cancel Booking</a>
+                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Current Booking</a>
+                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Previous Booking</a>
+                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Cancel Booking</a>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
@@ -100,9 +100,9 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Booking</a>
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item" href="mybooking.html">Current Booking</a>
-                                        <a class="dropdown-item" href="mybooking.html">Previous Booking</a>
-                                        <a class="dropdown-item" href="mybooking.html">Cancel Booking</a>
+                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Current Booking</a>
+                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Previous Booking</a>
+                                        <a class="dropdown-item" asp-action="MyBookings" asp-controller="AgentOperations">Cancel Booking</a>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
