--- a/Views/AdminOperations/Agents.cshtml
+++ b/Views/AdminOperations/Agents.cshtml
@@ -58,7 +58,7 @@
                                         {
                                             <td>
                                                 <label class="switch">
-                                                    <input type="checkbox" class="inputtype" id="@data.AgentId+'_'@data.IsActive" checked>
+                                                    <input type="checkbox" class="inputtype" id="@data.AgentId'_'@data.IsActive" checked>
                                                     <span class="slider round"></span>
                                                 </label>
                                             </td>
@@ -79,78 +79,7 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <form>
-                <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header agent-header">
-                                <h5 class="modal-title" id="staticBackdropLabel">Create-Agent</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <div class="agent-form">
-
-                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                    <div class="form-group">
-                                        <label class="label-text">Name</label>
-                                        <input type="text" asp-for="Registration.AgentName" id="name" class="form-control custom-form" placeholder="Your Name">
-                                        <span asp-validation-for="Registration.AgentName" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="label-text">Mobile</label>
-                                        <input type="text" asp-for="Registration.Mobile" id="mobile" class="form-control custom-form" placeholder="Mobile Number">
-                                        <span asp-validation-for="Registration.Mobile" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group email-group" >
-                                        <label class="label-text">Aadhar Card</label>
-                                        <input type="text" asp-for="Registration.Aaadhar" id="aadhar" class="form-control custom-form" placeholder="Aadhar Card">
-                                        <span asp-validation-for="Registration.Aaadhar" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="label-text">PanCard</label>
-                                        <input type="text" asp-for="Registration.PAN" id="pan" class="form-control custom-form" placeholder="PanCard">
-                                        <span asp-validation-for="Registration.PAN" class="text-danger"></span>
-
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="label-text">AccountHolderName</label>
-                                        <input type="text" asp-for="Registration.AccountHolderName " id="accountholdername" class="form-control custom-form" placeholder="PanCard">
-                                        <span asp-validation-for="Registration.AccountHolderName" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="label-text">AccountNumber</label>
-                                        <input type="text" asp-for="Registration.BankAccountNumber "  id="accountnumber"class="form-control custom-form" placeholder="PanCard">
-                                        <span asp-validation-for="Registration.BankAccountNumber" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="label-text">IFSC Code</label>
-                                        <input type="text" asp-for="Registration.IFSCCode " id="ifsccode" class="form-control custom-form" placeholder="PanCard">
-                                        <span asp-validation-for="Registration.IFSCCode" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="label-text">Email</label>
-                                        <input type="text" asp-for="Registration.Email" id="email" class="form-control custom-form" placeholder="Email">
-                                        <span asp-validation-for="Registration.Email" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="label-text">Password</label>
-                                        <input type="password" asp-for="Registration.Password" id="password" class="form-control custom-form" placeholder="Password">
-                                        <span asp-validation-for="Registration.Password" class="text-danger"></span>
-                                    </div>
-
-                                    <button type="submit" class="btn agent-submit-btn" onclick="RegisterAgentNew()">Submit</button>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                @*<button type="submit" class="btn agent-submit-btn">Submit</button>*@
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
+            </div>            
         </div>
     </section>
 </section>
@@ -186,44 +115,7 @@
                 alert(table.rows('.selected').data().length + ' row(s) selected');
             });
 
-            $("polygon").click(function () {
-                $(this).toggleClass("bg-red");
-            });
-            $("rect").click(function () {
-                $(this).toggleClass("bg-red");
-            });
-            $("path").click(function () {
-                $(this).toggleClass("bg-red");
-            });
-
-            $(".book-btn").click(function () {
-                $(this).hide();
-                $(".confirm-btn").addClass("book-text-show");
-                $(".cancel-btn").addClass("cancel-btn-show");
-                $("#timer").show();
-                $(".confirm-btn").show();
-            });
-
-            $(".booking-btn").click(function () {
-                $(".plot-info").hide();
-                $("#user-form").show();
-            });
-            $(".confirm-btn ").click(function () {
-                $(".plot-info").hide();
-                $("#user-form").show();
-                $(".custom-btn").show();
-                $(this).hide();
-
-            });
-
-            $(".custom-btn").click(function () {
-                $(".plot-info").hide();
-                $("#user-form").hide();
-                $(".cancel-btn").hide();
-                $(".success-msg").show();
-                $(this).hide();
-
-            });
+           
             $(".hamburger").click(function () {
                 $(this).toggleClass("is-active");
                 $(".sidebar").toggleClass("open-sidebar");
@@ -240,20 +132,26 @@
             });
             $(".inputtype").click(function () {
                 alert(this.id);
+                UpdatingAgentActiveStatus(id);
             })
         });
+        function UpdatingAgentActiveStatus(id) {
+            $.ajax({
+                type: "POST",
+                url: "/AdminOperations/UpdateStatus",
+                data: { "id":id},
+                success: function (response) { alert(response); },
+                error: function (error) { alert(error);}
+            });
+        }
+        function UpdatingDeletedStatus() {
+            $.ajax({
+                type: "POST",
+                url: "/AdminOperations/UpdatingDeletedStatus",
+                data: { "id": id },
+                success: function (response) { alert(response); },
+                error: function (error) { alert(error); }
+            });
+        }
     </script>
-<script >
-            function RegisterAgentNew() {                
-                $.ajax({
-                    type: "POST",
-                    url: "/AdminOperations/RegisterAgent",
-                    data: JSON.stringify({ "AgentName": $("#name").val(), "Email": $("#email").val(), "Mobile": $("#mobile").val(), "PAN": $("#pan").val(), "Aaadhar": $("#aadhar").val(), "AccountHolderName": $("#accountholdername").val(), "BankAccountNumber": $("#accountnumber").val(), "IFSCCode": $("#ifsccode").val(), "Password": $("#password").val() }),
-                    success: function (response) { },
-                    error: function (error) { }
-                });
-            }
-       
-</script>
-    
 }
